updated docs + response body + error code for expense
